# aoc25

./: .gitignore  CMakeLists.txt  genday.sh  setup.py
auxilary/: aoc_helper.cpp  errors.hpp  types.hpp
src/: main.cpp  types.hpp
tag1/: main.cpp
tag10/: main.cpp
tag11/: input_m.txt  main.cpp  main.py  test_2_graph  test_graph
tag2/: aoc_helper.cpp  input.txt  main.cpp  main_v2.cpp  test.txt  types.hpp
tag3/: aoc_helper.cpp  main.cpp
tag4/: main.cpp
tag5/: main.cpp  main.py
tag6/: main.cpp
tag7/: main.cpp
tag8/: main.cpp
tag9/: main.cpp
template/: main.cpp
